Fixed scrollbars in firefox

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,4 @@
 #rule, #output {
-  width: 800px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -9,4 +8,12 @@
   text-align: center;
 
   overflow: auto;
+}
+
+#rule {
+  width: 800px;
+}
+
+#output {
+  width : 100%;
 }
